Alexa; first api request

--- a/lang/lang_de.ini
+++ b/lang/lang_de.ini
@@ -1,2 +1,5 @@
+[answer]
+find_bikes = "Es befinden sich %1$s Fahrräder an Station <say-as interpret-as=\"spell-out\">%2$s</say-as>."
+
 [api]
 default_error = "Ups.. da ist etwas schief gelaufen. Sorry!"
