--- a/lang/lang_en.ini
+++ b/lang/lang_en.ini
@@ -1,2 +1,5 @@
+[answer]
+find_bikes = "There are %1$s bikes at station <say-as interpret-as=\"spell-out\">%2$s</say-as>"
+
 [api]
 default_error = "Uhh.. something went wrong. Sorry!"
