improved skill to habe default answer

--- a/lang/lang_de.ini
+++ b/lang/lang_de.ini
@@ -1,3 +1,6 @@
+[error]
+intent_not_found = "Entschuldige, das habe ich nicht verstanden!"
+
 [answer]
 find_bikes = "Es befinden sich %1$s Fahrräder an Station <say-as interpret-as=\"spell-out\">%2$s</say-as>."
 
