--- a/lang/lang_en.ini
+++ b/lang/lang_en.ini
@@ -1,3 +1,6 @@
+[error]
+intent_not_found = "Sorry, I didn't understand."
+
 [answer]
 find_bikes = "There are %1$s bikes at station <say-as interpret-as=\"spell-out\">%2$s</say-as>"
 
